<resources>
    <string name="app_name">ImageViewPager</string>
    <string name="menu_zoom_enable">Enable Zoom</string>
    <string name="menu_zoom_disable">Disable Zoom</string>
    <string name="menu_scale_fit_center">Change to FIT_CENTER</string>
    <string name="menu_scale_fit_start">Change to FIT_START</string>
    <string name="menu_scale_fit_end">Change to FIT_END</string>
    <string name="menu_scale_fit_xy">Change to FIT_XY</string>
    <string name="menu_scale_center">Change to CENTER</string>
    <string name="menu_scale_center_inside">Change to CENTER_INSIDE</string>
    <string name="menu_scale_center_crop">Change to CENTER_CROP</string>
    <string name="menu_zoom_random_animate">Animate scale to random value</string>
    <string name="menu_zoom_random">Set scale to random value</string>
    <string name="menu_matrix_restore">Restore Display Matrix</string>
    <string name="menu_matrix_capture">Capture Display Matrix</string>
    <string name="extract_visible_bitmap">Extract visible bitmap</string>
    <string name="menu_lock">Lock</string>
    <string name="menu_unlock">Unlock</string>
    <string name="title_activity_simple_sample">Simple Activity</string>
    <string name="title_activity_view_pager">View Pager</string>
    <string name="title_activity_rotation_sample">Rotation Sample</string>
    <string name="title_activity_picasso_sample">Picasso Sample</string>
</resources>